--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="logo.png" type="image/x-icon">
 <title>Cozytustudios Wallpaper </title>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;700&family=Sora:wght@400;600&display=swap" rel="stylesheet">
 <style>
